@@ -5478,6 +5478,13 @@
                                 </row>
                                 <row valign="top">
                                     <entry><para></para></entry>
+                                    <entry><para>left_mouse_button_mode</para></entry>
+                                    <entry><para></para></entry>
+                                    <entry><para></para></entry>
+                                    <entry><para></para></entry>
+                                </row>
+                                <row valign="top">
+                                    <entry><para></para></entry>
                                     <entry><para>left_mouse_button_unselects</para></entry>
                                     <entry><para></para></entry>
                                     <entry><para></para></entry>
@@ -5992,6 +5999,9 @@
                         </listitem>
                         <listitem>
                             <para>Support for metadata tags in internal viewer</para>
+                        </listitem>
+                        <listitem>
+                            <para>Support for single-click open mode</para>
                         </listitem>
                         <listitem>
                             <para>Support for row alternate background in colour themes</para>
