@@ -1,3 +1,13 @@
+2009-05-18  Christopher Zimmermann  <madroach@zakweb.de>
+
+	* src/gnome-cmd-data.cc:
+	* src/gnome-cmd-data.h:
+	* src/gnome-cmd-file-list.cc:
+	* src/gnome-cmd-file-list.h:
+	* src/gnome-cmd-file-selector.cc:
+	* src/gnome-cmd-options-dialog.cc:
+	Support for single-click open mode
+
 2009-05-16  Piotr Eljasiak  <epiotr@use.pl>
 
 	* src/gnome-cmd-profile-component.cc:
